--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 __pycache__/
 
 # 合成器相关
-/data/fluidsynth/MS Basic.sf3
+*.sf3
+*.sf2
 /data/fluidsynth/fluidsynth_win/
 
 # VAE数据集
@@ -14,6 +15,7 @@ __pycache__/
 /data/Bach10_v1.1-main/
 /data/PHENICX-Anechoic/
 /data/URMP/
+/data/guitarset/
 # 生成的数据集
 /data/septimbre/**/
 
@@ -26,3 +28,6 @@ __pycache__/
 /evaluate/URMP_processed/
 /evaluate/BACH10_processed/
 /evaluate/basicamt/
+
+# 测试文件夹
+/test/
