--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ __pycache__/
 /evaluate/BACH10_processed/
 /evaluate/basicamt/
 /evaluate/basicpitch/
+/evaluate/basicpitch_raw/
 /evaluate/septimbre/
 
 # 测试文件夹
