--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.9.3",
     "numpy>=2.1.3",
     "scipy>=1.14.1",
+    "scikit-learn>=1.7.2",
     "mido>=1.2.10",
     "tqdm>=4.66.5",
     "mirdata>=0.3.9",
